syntax = "proto3";
package fileserver.v1;
option go_package = "api";
import "google/protobuf/timestamp.proto";

service FileStore{
  rpc UploadFile(stream FileData) returns (UploadResponse);
  rpc DownloadFile(DownloadRequest) returns (stream FileData);
  rpc ListAll (ListRequest) returns (FileList);
}

message FileData {
  bytes chunk = 1;
}

message UploadResponse{
  string name = 1;
}

message DownloadRequest{
  string name = 1;
}

message ListRequest{

}

message FileList{
  repeated FileInfo files = 1;
}

message FileInfo {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}